--- a/website/src/index.html
+++ b/website/src/index.html
@@ -23,7 +23,12 @@
     </div>
 
     <div id="tooltip">
-      Hover on an area to see more
+      <div id="tooltip-data">
+        Hover on an area to see more
+      </div>
+      <div id="tooltip-scatter">
+
+      </div>
     </div>
     <div id='map'></div>
   </div>
